<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaisieActivity">

    <TextView
        android:id="@+id/labelPrenoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPrenoms"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/oubliPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oubliPrenom"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintTop_toBottomOf="@id/labelPrenoms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/prenom1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/prenom1"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPrenoms"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/prenom2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/prenom2"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenom1"
        android:inputType="text"
        />

    <ImageView
        android:id="@+id/imgCheck"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/imgDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenom2"
        android:onClick="lancerActivite2"
        app:srcCompat="@drawable/ic_baseline_check_circle_24" />

</androidx.constraintlayout.widget.ConstraintLayout>